--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="shortcut icon" href="#">
     <title>GIK2F8 - Sökfunktion</title>
 </head>
 <body class="bg-teal-500 h-screen">
@@ -13,5 +14,6 @@
         <label class="text-black-50 text-xl block" for="searchField">Ange sökord: </label>
         <input class="rounded-lg p-2" type="text" id="searchField">
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
