--- a/index.html
+++ b/index.html
@@ -11,12 +11,24 @@
   <body class="bg-teal-500 h-screen">
     <h1 class="text-6xl text-teal-100 text-center mt-4 mb-7">Sök böcker</h1>
     <main
-      class="w-4/5 mx-auto bg-white/40 py-12 px-6 md:w-4/5 rounded-lg flex justify-center align-center flex-col"
+      class="w-4/5 mx-auto bg-white/40 py-12 px-6 md:w-3/5 rounded-lg flex justify-center align-center flex-col"
     >
       <label class="text-black-50 text-xl block" for="searchField"
         >Ange sökord:
       </label>
       <input class="rounded-lg p-2" type="text" id="searchField" />
+      <ul
+        class="book-list rounded-md border-2 border-blue-400 bg-white w-full mx-auto my-2"
+      >
+        första rutan
+        <li
+          class="book-list__item mb-2 mx-2 last:mb-0 p-3 text-indigo-900 last:border-b-0 border-b border-indigo-700 cursor-pointer"
+        ></li>
+        andra rutan
+        <li
+          class="book-list__item mb-2 mx-2 last:mb-0 p-3 text-indigo-900 last:border-b-0 border-b border-indigo-700 cursor-pointer"
+        ></li>
+      </ul>
     </main>
     <script src="script.js"></script>
   </body>
