--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </label>
       <input class="rounded-lg p-2" type="text" id="searchField" />
     </main>
+    <script src="api/api.js"></script>
     <script src="Components/BookListItem.js"></script>
     <script src="Components/BookList.js"></script>
     <script src="script.js"></script>
