--- a/02-todo/client/index.html
+++ b/02-todo/client/index.html
@@ -34,7 +34,7 @@
             </section>
             <section class="mb-2">
               <label class="block pr-5 mb-2 text-xl" for="description"
-                >Description</label
+                >Beskrivning</label
               >
               <p class="message text-sm text-red-700 mb-2 hidden">
                 Error message
@@ -49,7 +49,7 @@
             </section>
             <section class="mb-2">
               <label class="block pr-5 mb-2 text-xl" for="title"
-                >Utfört senast</label
+                >Slutförd senast</label
               >
               <p class="message text-sm text-red-700 mb-2 hidden">
                 Error message
@@ -76,5 +76,6 @@
         </section>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
