Api class created

--- a/02-todo/client/index.html
+++ b/02-todo/client/index.html
@@ -76,6 +76,7 @@
         </section>
       </section>
     </main>
+    <script src="Api.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
